--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "material",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@fontsource/roboto": "^4.5.7",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.2",
-    "next": "12.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-transition-group": "^4.4.4"
-  },
-  "devDependencies": {
-    "eslint": "8.20.0",
-    "eslint-config-next": "12.2.3"
-  }
+   "name": "material",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "export": "next export",
+      "lint": "next lint"
+   },
+   "dependencies": {
+      "@emotion/react": "^11.9.3",
+      "@emotion/styled": "^11.9.3",
+      "@fontsource/roboto": "^4.5.7",
+      "@mui/icons-material": "^5.8.4",
+      "@mui/material": "^5.9.2",
+      "css-doodle": "^0.29.0",
+      "next": "12.2.3",
+      "react": "18.2.0",
+      "react-dom": "18.2.0",
+      "react-transition-group": "^4.4.4"
+   },
+   "devDependencies": {
+      "eslint": "8.20.0",
+      "eslint-config-next": "12.2.3"
+   }
 }
