--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "@fontsource/roboto": "^4.5.7",
       "@mui/icons-material": "^5.8.4",
       "@mui/material": "^5.9.2",
+      "@sendgrid/mail": "^7.7.0",
       "next": "12.2.3",
       "react": "18.2.0",
       "react-dom": "18.2.0",
